# sombra-engine

./: LICENSE  README.md  debug.py  demo.py  main.py  pyproject.toml  requirements.txt  simple.py
examples/: gizmo.py
sombra_engine/: __init__.py  camera.py  constants.py  utils.py
sombra_engine/animations/: __init__.py  animation.py  animator.py
sombra_engine/app/: app.py
sombra_engine/constants/: __init__.py  actions.py
sombra_engine/debug/: __init__.py  gizmo.py  stats.py
sombra_engine/graphics/: __init__.py  material_group.py  skeletal_material_group.py  wireframe_group.py
sombra_engine/models/: __init__.py  mesh.py  model.py  obj.py  skeletal_mesh.py  wireframe.py
sombra_engine/primitives/: __init__.py  material.py  scene_object.py  transform.py  triangle.py  vertex.py  vertex_group.py
sombra_engine/scene/: __init__.py  lights.py  scene.py
sombra_engine/scene/cameras/: camera.py  controllers.py  orthographic_camera.py  perspective_camera.py
sombra_engine/shaders/: blinn.frag  blinn_barycentric.frag  default.vert  gizmo.frag  gizmo.vert  lambert.frag  lambert_solid.frag  lambert_textured.frag  normals.frag  normals_from_bump.frag  skeletal.vert  solid.frag  solid_textured.frag  specular.frag  wireframe.frag
tests/: __init__.py  test_obj.py
tests/data/: ancient_house.mtl  plane.mtl  shoe_box2.mtl  test.frag  test.vert
